apps/base/maybe/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-bazarr/
# https://github.com/morpheus65535/bazarr
#

apiVersion: v1
kind: Service
metadata:
  name: maybe
  namespace: maybe
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: maybe
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: maybe
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maybe
  namespace: maybe
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: maybe
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: maybe
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: maybe
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: maybe
          image: ghcr.io/maybe-finance/maybe:latest # {"$imagepolicy": "maybe:maybe"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 150m
              memory: 150Mi
          volumeMounts:
            - name: maybe-pvc
              mountPath: /var/cache/ntfy
              subPath: config
      volumes:
        - name: maybe-pvc
          persistentVolumeClaim:
            claimName: maybe-pvc
