apps/base/maybe/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maybe-dashboard-https
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: maybe-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`maybe.powell.place`)
      kind: Rule
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: maybe
          port: http
